istio/k8s/02-istio-ingress-gateway.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata: 
  name: ingress-gateway
  namespace: istio-system
spec: 
  selector:
    istio: ingressgateway
  servers: 
  - hosts:
    - tjhiatt.dev
    - timhiatt.dev 
    port: 
      number: 80
      name: http
      protocol: HTTP
  #- port: 
  #    number: 443
  #    name: https
  #    protocol: HTTPS
